force-app/main/default/objects/Conversation_Step__mdt/Conversation_Step__mdt.object-meta.xml
<CustomObject>
    <label>Conversation Step</label>
    <pluralLabel>Conversation Steps</pluralLabel>
</CustomObject>