force-app/main/default/objects/Conversation_Step__mdt/fields/Conversation_Flow__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Flow__c</fullName>
    <label>Conversation Flow</label>
    <referenceTo>Conversation_Flow__mdt</referenceTo>
    <relationshipLabel>Conversation Steps</relationshipLabel>
    <relationshipName>Conversation_Steps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>