force-app/main/default/objects/Conversation_Step__mdt/fields/Field_to_Populate__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Populate__c</fullName>
    <label>Field to Populate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>