force-app/main/default/objects/Conversation_Step__mdt/fields/Next_Step_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_API_Name__c</fullName>
    <label>Next Step API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>