force-app/main/default/objects/Conversation_Step__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Step Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>